--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,35 +1,3 @@
-.app-container {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-}
-
-.left-bar {
-  width: 22.5%;
-  height: 90vh;
-  margin: 1%;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-
-.right-bar {
-  flex: 1;
-  margin: 1%;
-  height: 90vh;
-  border-style: groove;
-  border-radius: 10px;
-}
-
-.suggestion-box {
-  height: 55vh;          /* Fixed height for vertical scrolling */
-  width: 94%;           /* Ensure it takes up full width of the container */
-  margin: 1rem;          /* Add margin */
-  border-radius: 10px;   /* Rounded corners */
-  border-style: groove;  /* Add border styling */
-  white-space: normal;   /* Ensures text wraps onto the next line */
-  overflow-y: auto;      /* Enables vertical scrolling */
-  overflow-x: hidden;    /* Prevents horizontal scrolling */
-  padding: 1rem;         /* Adds padding inside the box */
-  box-sizing: border-box; /* Ensure padding does not affect width */
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
