--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,4 @@
-.app-container {
-    display: flex;
-  }
-  
-  main {
-    flex-grow: 1;
-    padding: 40px;
-  }
-  
-  .course-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
+/* 
+  .app-container{
+    background-color: brown;
+  } */
