--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,6 +1,6 @@
 .header {
     padding: 40px;
-    background-color: #fafafa;
+    background-color: #eff0f7;
     border-bottom: 1px solid #eaeaea;
   }
   
