margin added in logo and profile

--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -24,4 +24,12 @@
     border-radius: 50%;
     cursor: pointer;
   }
+
+  .navbar-logo{
+    margin-left: 10px;
+  }
+
+  .navbar-profile{
+    margin-right: 10px;
+  }
   
