--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -6,7 +6,7 @@
   display: flex;            
   justify-content: space-between; 
   align-items: center;      
-  background-color: #3b5998; 
+  background-color: #000206; 
   padding: 10px 20px;      
   z-index: 1000;            
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
